# flagkit-sdk-rust

./: Cargo.toml  README.md
sdk-lab/: README.md  main.rs
src/: cache.rs  client.rs  config.rs  context.rs  event_persistence.rs  http_client.rs  lib.rs  security.rs  types.rs
src/core/: cache.rs  config.rs  context_manager.rs  event_queue.rs  mod.rs  polling_manager.rs  streaming_manager.rs
src/error/: mod.rs  sanitizer.rs
src/http/: circuit_breaker.rs  client.rs  mod.rs  retry.rs
src/types/: mod.rs
src/utils/: mod.rs  version.rs
tests/: cache_tests.rs  circuit_breaker_tests.rs  error_code_tests.rs  evaluation_context_tests.rs  evaluation_result_tests.rs  event_persistence_tests.rs  flag_state_tests.rs  flag_value_tests.rs  http_client_tests.rs  options_tests.rs  security_tests.rs
