[package]
name = "flagkit"
version = "1.0.0"
edition = "2021"
description = "Official Rust SDK for FlagKit feature flag management"
license = "MIT"
repository = "https://github.com/flagkit/flagkit-rust"
keywords = ["feature-flags", "feature-toggles", "flagkit"]
categories = ["api-bindings", "config"]
rust-version = "1.70"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
once_cell = "1.18"
rand = "0.8"
tracing = "0.1"
url = "2.5"
uuid = { version = "1.6", features = ["v4"] }
urlencoding = "2.1"

# Security/crypto dependencies
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[features]
default = []
